; ModuleID = '/home/carl/AnghaBench/linux/drivers/i2c/busses/extr_i2c-amd-mp2-plat.c_i2c_amd_remove.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/i2c/busses/extr_i2c-amd-mp2-plat.c_i2c_amd_remove.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.platform_device = type { i32 }
%struct.amd_i2c_dev = type { i32, %struct.amd_i2c_common }
%struct.amd_i2c_common = type { i32* }

@I2C_LOCK_ROOT_ADAPTER = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.platform_device*)* @i2c_amd_remove to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @i2c_amd_remove(%struct.platform_device* %0) #0 {
  %2 = alloca %struct.platform_device*, align 8
  %3 = alloca %struct.amd_i2c_dev*, align 8
  %4 = alloca %struct.amd_i2c_common*, align 8
  store %struct.platform_device* %0, %struct.platform_device** %2, align 8
  %5 = load %struct.platform_device*, %struct.platform_device** %2, align 8
  %6 = call %struct.amd_i2c_dev* @platform_get_drvdata(%struct.platform_device* %5)
  store %struct.amd_i2c_dev* %6, %struct.amd_i2c_dev** %3, align 8
  %7 = load %struct.amd_i2c_dev*, %struct.amd_i2c_dev** %3, align 8
  %8 = getelementptr inbounds %struct.amd_i2c_dev, %struct.amd_i2c_dev* %7, i32 0, i32 1
  store %struct.amd_i2c_common* %8, %struct.amd_i2c_common** %4, align 8
  %9 = load %struct.amd_i2c_dev*, %struct.amd_i2c_dev** %3, align 8
  %10 = getelementptr inbounds %struct.amd_i2c_dev, %struct.amd_i2c_dev* %9, i32 0, i32 0
  %11 = load i32, i32* @I2C_LOCK_ROOT_ADAPTER, align 4
  %12 = call i32 @i2c_lock_bus(i32* %10, i32 %11)
  %13 = load %struct.amd_i2c_dev*, %struct.amd_i2c_dev** %3, align 8
  %14 = call i32 @i2c_amd_enable_set(%struct.amd_i2c_dev* %13, i32 0)
  %15 = load %struct.amd_i2c_common*, %struct.amd_i2c_common** %4, align 8
  %16 = call i32 @amd_mp2_unregister_cb(%struct.amd_i2c_common* %15)
  %17 = load %struct.amd_i2c_common*, %struct.amd_i2c_common** %4, align 8
  %18 = getelementptr inbounds %struct.amd_i2c_common, %struct.amd_i2c_common* %17, i32 0, i32 0
  store i32* null, i32** %18, align 8
  %19 = load %struct.amd_i2c_dev*, %struct.amd_i2c_dev** %3, align 8
  %20 = getelementptr inbounds %struct.amd_i2c_dev, %struct.amd_i2c_dev* %19, i32 0, i32 0
  %21 = load i32, i32* @I2C_LOCK_ROOT_ADAPTER, align 4
  %22 = call i32 @i2c_unlock_bus(i32* %20, i32 %21)
  %23 = load %struct.amd_i2c_dev*, %struct.amd_i2c_dev** %3, align 8
  %24 = getelementptr inbounds %struct.amd_i2c_dev, %struct.amd_i2c_dev* %23, i32 0, i32 0
  %25 = call i32 @i2c_del_adapter(i32* %24)
  ret i32 0
}

declare dso_local %struct.amd_i2c_dev* @platform_get_drvdata(%struct.platform_device*) #1

declare dso_local i32 @i2c_lock_bus(i32*, i32) #1

declare dso_local i32 @i2c_amd_enable_set(%struct.amd_i2c_dev*, i32) #1

declare dso_local i32 @amd_mp2_unregister_cb(%struct.amd_i2c_common*) #1

declare dso_local i32 @i2c_unlock_bus(i32*, i32) #1

declare dso_local i32 @i2c_del_adapter(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
